# libusbx

./: CMakeLists.txt
Xcode/libusbx.xcodeproj/: project.pbxproj
config/mac/: config.h
libusbx/libusbx.xcodeproj/: project.pbxproj
